# mining-cpp

./: CMakeLists.txt  README.md  load_data.cpp  log.txt  loss.txt  main  make.sh  test  test.cpp  train.cpp
data/mushroom_dataset/: test_data.txt  test_label.txt  train_data.txt  train_label.txt  valid_data.txt  valid_label.txt
data/optical_digits_dataset/: test_data.txt  test_label.txt  train_data.txt  train_label.txt  valid_data.txt  valid_label.txt
data/spam_dataset/: test_data.txt  test_label.txt  train_data.txt  train_label.txt  valid_data.txt  valid_label.txt
lib/: CMakeLists.txt
lib/activationfunction/: activation.cpp  activation.h
lib/layer/: layer.cpp  layer.h
lib/lossfunction/: lossfunction.cpp  lossfunction.h
lib/matrix/: matrix.cpp  matrix.h
lib/model/: model.cpp  model.h
